# FolioClient

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README  README.md  integration_test.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sushiharvester.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml  stable-docs.yml
determid/: determid.py  folio_namespaces.py  folio_uuid.py
docs/: Makefile  async_usage.md  authentication.md  conf.py  index.md  installation.md  pagination.md  performance.md  quickstart.md  requirements.txt  retry_configuration.md
docs/api/: exceptions.md  folioclient.md
folio_uuid/: __init__.py  folio_namespaces.py  folio_uuid.py
folio_uuid/tests/: test_folio_uuid.py
folioclient/: FolioClient.py  __init__.py  decorators.py  exceptions.py
folioclient/tests/: test_basic.py  test_folio_client.py
src/folioclient/: FolioClient.py  __init__.py  _httpx.py  cached_property.py  decorators.py  exceptions.py
tests/: concurrent_auth_tester.py  conftest.py  integration_tests.py  test_decorators.py  test_exceptions.py  test_folio_client.py  test_httpx.py  test_utils.py
