[tool.poetry]
name = "folioclient"
version = "0.60.7"
authors = ["Theodor Tolstoy <github.teddes@tolstoy.se>", "Brooks Travis <brooks.travis@gmail.com>"]
description = "An API wrapper over the FOLIO LSP API Suite OKAPI."
repository = "https://github.com/FOLIO-FSE/folioclient"
keywords = ["FOLIO", "ILS", "LSP", "Library Systems", "MARC21", "Library data"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FOLIO-FSE/folioclient"



[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99


[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.2"
pyyaml = "^6.0"
py-openapi-schema-to-json-schema = "^0.0.3"
python-dateutil = "^2.8.2"
jsonref = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-bandit = "^4.1.1"
flake8-isort = "^5.0.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.4"
myst-parser = "^0.18.1"
nox = "^2022.11.21"
pylint = "^2.17.2"

[tool.poetry.extras]
docs = ["m2r", "sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "toml"]
