[metadata]
name = folioclient
version = 0.40.2
author = Theodor Tolstoy
author_email = pypi.teddes@tolstoy.se
description = An API wrapper over the FOLIO LSP API Suite OKAPI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FOLIO-FSE/folioclient
project_urls =
    Bug Tracker = https://github.com/FOLIO-FSE/folioclient/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    certifi==2021.10.8
    charset-normalizer==2.0.12; python_version >= '3'
    idna==3.3; python_version >= '3'
    pyyaml==6.0
    requests==2.27.1
    urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
packages = find:
python_requires = >=3.9
